--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     Varundev Sukhil<br><br></h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Website under construction.<br><br></h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Ph.D. Candidate (Computer Engineering)<br>University of Virginia</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://github.com/varundevsukhil" target="_blank">GitHub</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://github.com/varundevsukhil" target="_blank"><span class="mbri-github mbr-iconfont mbr-iconfont-btn"></span>GitHub</a></div>
             </div>
         </div>
     </div>
@@ -42,7 +42,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobiri.se/g">how to build your own website for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobiri.se/s">free bootstrap themes</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
