--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/r">bootstrap template</a></section><section class="cid-rNBmH8mhhg mbr-fullscreen mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobiri.se/s">bootstrap theme</a></section><section class="cid-rNBmH8mhhg mbr-fullscreen mbr-parallax-background" id="header2-4">
 
     
 
@@ -81,7 +81,7 @@
                     Varundev Sukhil<br><br></h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Ph.D. Candidate (Computer Engineering)<br>University of Virginia<br><br></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="mailto:varundev@virginia.edu"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Email</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="mailto:vsukhil@gmail.com"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Email</a></div>
             </div>
         </div>
     </div>
