--- a/algorithms.html
+++ b/algorithms.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best html templates</a></section><section class="cid-rOf5HMYbQX mbr-fullscreen mbr-parallax-background" id="header2-f">
+<section class="engine"><a href="https://mobiri.se/u">bootstrap website templates</a></section><section class="cid-rOf5HMYbQX mbr-fullscreen mbr-parallax-background" id="header2-f">
 
     
 
