--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-7">
                     <br>I am a computer engineer and a roboticist by training, and my research focuses on finding solutions to the challenges faced by autonomous vehicles when they encounter situations that they were not normally designed for - I am attempting to address these issues through autonomous racing by using classical path planning and navigation.<br><br></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-black display-4" href="https://mobirise.co">RESUME &nbsp;</a> <a class="btn btn-md btn-black display-4" href="https://mobirise.co">PROJECTS</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-black display-4" href="resume.html">&nbsp;RESUME&nbsp;</a> <a class="btn btn-md btn-black display-4" href="projects.html">PROJECTS</a></div>
             </div>
         </div>
     </div>
@@ -170,7 +170,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zwRF84wBy6icanZAfkkZ77B8Fssz68UNX4hRqvD0+b5tDuYG22FrWTtQcxFxIPKyFCTjPP9/5RSZLizBbI3/if7643PRsRU5XyPaQZBFNcCObZFxDQBwn2Ri4EC+Az9j.1BV7wzdmYfL5kDd1DXtRABNJz/Djig4lSeM/iw2yTrYB7puO8/brQVnOXNAe8JTGbXa8WH0qPO4iWIuNylwx/2S0NNUH/FO9NoN/OTi4MKXnQM5fAkYp1DZFOnL1ogBu">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5CQrU35XDxh6rHdmRkPhOZdzzbooybzUz4nl9v2PSczIA2zy3i2xpyqYun+8YZf10U2xShcXG3Gc2mcNr86pzqeJXO3aP09JLCii6NvbAsie4IkUoSivPAyuQ5SB9HTN.B2re4hsHgmIq3QqF0uiMpSAOKZIfIWGCgOSYaHo2rnHOW2R/FatUtoTcF5xyT1/bEBY2fae9yP9L48kh7/NhOm8q5MusdKKBsLVZOWTHgiN6n1maVRYfnYOoFxrEjvWE">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
